# WorldWideCalendar

./: .gitignore  CMakeLists.txt  README.txt  docker-compose.yml  dockerize  license.txt
Docker/: Data_Dockerfile  Dockerfile  WWC_Dockerfile  docker-compose.yml
Docker/conf/: httpd.conf
Docker/conf/sites-available/: 000-default.conf
htdocs/: AboutArmenianCalendar.html  AboutBahá'íCalendar.html  AboutChineseCalendar.html  AboutCopticCalendar.html  AboutEasternBahá'íCalendar.html  AboutEgyptianCalendar.html  AboutEthiopianCalendar.html  AboutFrenchRevolutionaryCalendar.html  AboutGregorianCalendar.html  AboutHebrewCalendar.html  AboutHinduCalendar.html  AboutHindulunisolarCalendar.html  AboutISO8601Calendar.html  AboutIslamicCalendar.html  AboutJulianCalendar.html  AboutMayanCalendar.html  AboutPersianCalendar.html  BadiCalendarPage.js  ChineseCalendarPage.js  DMYWCalendarPage.js  EpsilonDelta.js  HinduLunisolarCalendarPage.js  HinduSolarOptions.js  ISO8601CalendarPage.js  MayanCalendarPage.js  PersianOptions.js  WorldWideCalendar.css  WorldWideCalendar.js  WorldWideCalendar_base.css  WorldWideCalendar_columns.css  WorldWideCalendar_forms.css  WorldWideCalendar_table.css  WorldWideCalendar_ui.css  index.html  wwwcal.css
htdocs/jslib/: jquery.min.js
source/: BadiCalendarService.cpp  BadiCalendarService.hpp  CMakeLists.txt  CalendarDMYWService.hpp  CalendarService.hpp  ChineseCalendarService.cpp  ChineseCalendarService.hpp  DMYWCalendarService.hpp  FrenchRevolutionaryCalendarService.cpp  FrenchRevolutionaryCalendarService.hpp  HinduLunisolarCalendarService.cpp  HinduLunisolarCalendarService.hpp  HinduSolarOptions.cpp  HinduSolarOptions.hpp  ISO8601CalendarService.cpp  ISO8601CalendarService.hpp  MayanCalendarService.cpp  MayanCalendarService.hpp  NoOptions.hpp  PersianOptions.cpp  PersianOptions.hpp  WorldWideCalendar.cpp
